--- a/public/assets/css/bootstrap/bootstrap.css
+++ b/public/assets/css/bootstrap/bootstrap.css
@@ -1609,6 +1609,7 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
   height: calc(2.3125rem + 2px); }
 
 .form-group {
+  height: 5vh;
   margin-bottom: 1rem; }
 
 .form-text {
