--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -723,6 +723,7 @@
   background: rgba(0, 0, 0, 0.7); }
 
 .pb_form_v1 {
+  height: 45vh;
   padding: 50px;
   -webkit-box-shadow: 1px 11px 68px -20px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 1px 11px 68px -20px rgba(0, 0, 0, 0.75);
