Links a las llaves y cerraduras en el perfil y cambios en configuracion

--- a/public/assets/css/customdash.css
+++ b/public/assets/css/customdash.css
@@ -67,7 +67,20 @@ input:checked + .slider:before {
 }
 
 .titulo-config{
-
+  padding: 20px;
   display: inline;
   color: black;
+}
+
+a{
+  color: black;
+  transition: 0.5s ease;
+}
+
+a:hover{
+  text-decoration: none;
+}
+
+.appconf{
+  padding: 20px;
 }
