--- a/public/assets/css/customdash.css
+++ b/public/assets/css/customdash.css
@@ -99,3 +99,10 @@ a:hover{
 .yellowback{
   background-color: yellow !important;
 }
+.oscuro{
+filter: invert(80%);
+}
+body.oscuro{
+  background-color: #333;
+  filter: invert(0%);
+}
