--- a/public/assets/css/customLanding.css
+++ b/public/assets/css/customLanding.css
@@ -10,3 +10,13 @@
 .logo-white{
 	width: 150px;
 }
+#rememberCheck{
+	margin: auto;
+
+	padding-left: 0px;
+}
+#remember{
+	margin: auto;
+	position: static;
+
+}
